icecream dark mode pixel fix

--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ div .bubble {
   border-radius: 50%;
 }
 .icecream .head .bite:nth-child(2) {
-  left: 20px;
+  left: 23px;
   top: 20px;
   width: 30px;
   height: 30px;
